# chat-server

./: .env_sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  upstream.conf
chat-server/: Consultant.py  Dockerfile  EventHandler.py  MeetingRoom.py  RealtimeAPI.py  RealtimeClient.py  chatting_command.py  firestore.py  iso_639_lang.py  main.py  pyproject.toml  test.html  test_chat.html  test_translation.html  translation_test.html
chat-server/config/: log.py  path.py
chat-server/prompt/: footer.py  instruction.py  meeting_instruction.py  translation.py
chat-server/sample/: org_apple.py  org_rockhead_martin.py  pcm_file_0.txt  pcm_file_1.txt  pcm_file_4.txt  pcm_file_5.txt  pcm_file_8.txt  pcm_file_9.txt
chat-server/static/: audio_worker.js  download_audio.html  recorder-worklet-processor.js
recommendation/: Dockerfile  main.py  pyproject.toml
recommendation/config/: chatbot_config.json  company_data_sample.json  log.py  path.py
recommendation/data/: 4.company_keyword.json  5.unique_merged_data_with_key.json  company.index  company_metadata.json
recommendation/lifecycle/: firebase_event_listener.py
recommendation/model/: chatbot.py  embedding.py  firebase_client.py
recommendation/schema/: company.py  user.py
recommendation/service/: company_data_handle.py  recommendation.py
recommendation/utils/: data_management.py  exceptions.py  file_util.py
srcs/: RealtimeAPI.py  chatting_command.py  main.py  test.html
srcs/sample/: pcm_file_2.txt  pcm_file_3.txt  pcm_file_6.txt  pcm_file_7.txt
summary/: Dockerfile  main.py  pyproject.toml
summary/config/: chatbot_config.json  log.py  path.py
summary/model/: chatbot.py
summary/schema/: user.py
summary/service/: summary.py  summary_ordered_script.py
summary/utils/: file_util.py
utils/: Dockerfile  pyproject.toml  read_test_firebase.py  sleep.py  voice.py
web/: main.py  pyproject.toml
