[tool.poetry]
name = "chat-server"
version = "0.1.0"
description = "chatting server"
authors = ["sindydwns <sindydwns@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.10.10"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
attrs = "24.2.0"
beautifulsoup4 = "4.12.3"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
colorama = "0.4.6"
dataclasses-json = "0.6.7"
deep-translator = "1.11.4"
distro = "1.9.0"
filelock = "3.16.1"
frozenlist = "1.5.0"
fsspec = "2024.10.0"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.6"
httpx = "0.27.2"
huggingface-hub = "0.26.2"
idna = "3.10"
Jinja2 = "3.1.4"
jiter = "0.6.1"
joblib = "1.4.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
langchain = "0.3.4"
langchain-community = "0.3.3"
langchain-core = "0.3.13"
langchain-text-splitters = "0.3.0"
langsmith = "0.1.137"
MarkupSafe = "3.0.2"
marshmallow = "3.23.0"
mpmath = "1.3.0"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
networkx = "3.4.2"
numpy = "1.26.4"
openai = "1.52.2"
orjson = "3.10.10"
packaging = "24.1"
pillow = "11.0.0"
propcache = "0.2.0"
pydantic = "2.9.2"
pydantic-settings = "2.6.0"
pydantic_core = "2.23.4"
python-dotenv = "1.0.1"
PyYAML = "6.0.2"
regex = "2024.9.11"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
safetensors = "0.4.5"
scikit-learn = "1.5.2"
scipy = "1.14.1"
sentence-transformers = "3.2.1"
setuptools = "75.1.0"
sniffio = "1.3.1"
soupsieve = "2.6"
SQLAlchemy = "2.0.36"
sympy = "1.13.1"
tenacity = "9.0.0"
threadpoolctl = "3.5.0"
tokenizers = "0.20.1"
torch = "2.5.0"
tqdm = "4.66.6"
transformers = "4.46.0"
typing-inspect = "0.9.0"
typing_extensions = "4.12.2"
urllib3 = "2.2.3"
wheel = "0.44.0"
yarl = "1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
