[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["sindydwns <sindydwns@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
firebase-admin = "^6.6.0"
openai = "^1.55.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
